Updating database configurations

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
     "EcoGasDatabase": {
         "ConnectionString": "mongodb+srv://root:root@cluster1.ylgkp9g.mongodb.net/?retryWrites=true&w=majority",
         "DatabaseName": "EcoGas",
-        "BooksCollectionName": "Station"
+        "StationsCollectionName": "Station"
     },
     "AllowedHosts": "*"
 }
