User Management Created

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,10 +5,11 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "EcoGasDatabase": {
-        "ConnectionString": "mongodb+srv://root:root@cluster1.ylgkp9g.mongodb.net/?retryWrites=true&w=majority",
-        "DatabaseName": "EcoGas",
-        "StationsCollectionName": "Station"
-    },
+  "EcoGasDatabase": {
+    "ConnectionString": "mongodb+srv://root:root@cluster1.ylgkp9g.mongodb.net/?retryWrites=true&w=majority",
+    "DatabaseName": "EcoGas",
+    "StationsCollectionName": "Station",
+    "UsersCollectionName": "Users"
+  },
     "AllowedHosts": "*"
 }
