Creating Queue service

--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,8 @@
     "ConnectionString": "mongodb+srv://root:root@cluster1.ylgkp9g.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "EcoGas",
     "StationsCollectionName": "Station",
-    "UsersCollectionName": "Users"
+    "UsersCollectionName": "Users",
+    "QueueCollectionName": "Queues"
   },
     "AllowedHosts": "*"
 }
